@@ -37,6 +37,7 @@ void jabber_id_free(JabberID *jid);
 
 char *jabber_get_resource(const char *jid);
 char *jabber_get_bare_jid(const char *jid);
+char *jabber_id_get_bare_jid(const JabberID *jid);
 
 const char *jabber_normalize(const PurpleAccount *account, const char *in);
 
